# SimulAgent

./: .gitignore  CLAUDE.md  README.md  README_EN.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: config.py
backend/src/agents/: asr_agent.py  context_agent.py  graph.py  revision_agent.py  summary_agent.py  translation_agent.py
backend/src/api/: server.py  ws_handler.py  ws_session.py
backend/src/api/routes/: auth.py  glossary.py  session.py  summary.py  system.py  tts.py
backend/src/asr/: bailian_asr.py  funasr_engine.py  stream_buffer.py
backend/src/capture/: device_manager.py  system_audio.py
backend/src/models/: __init__.py  database.py  session.py  summary.py  terminology.py  transcription.py  translation.py  user.py
frontend/: package-lock.json  package.json
frontend/electron/: main.ts  preload.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: AuthModal.tsx  ClientLayout.tsx  ControlPanel.tsx  LangSelect.tsx  Pagination.tsx  SessionHistory.tsx  SettingsPanel.tsx  Sidebar.tsx  SubtitleWindow.tsx  SummaryView.tsx  TranslatePage.tsx
frontend/src/hooks/: useAudioCapture.ts  useAuth.tsx  useWebSocket.ts
frontend/src/lib/: tts.ts
specs/001-simulagent-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+10 files in other folders)
