[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulagent-backend"
version = "0.1.0"
description = "SimulAgent real-time simultaneous interpretation backend"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.setuptools.packages.find]
where = ["src"]
